[build-system]
requires = [
  "numpy",
  "Cython",
  "setuptools",
  "wheel",
  "packaging",
  "mmcv",
  "opencv-python",
]

[tool.black]
line_length = 80
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.readme
  | configs
  | data
  | notebooks
  | work_dirs
)/
'''
